# fek

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION.md  pyproject.toml  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: README.md  analysis.md  architecture.md  competitive-analysis.md  learn-design.md  migration-plan.md  roadmap.md  terminology.md
docs/ecosystem/: ai-infra-landscape.md
docs/reviews/: architecture-review-2026.md
docs/rfcs/: 0001-project-vision.md  0002-execution-model.md  0003-policy-engine.md  0004-compute-graph.md  0005-runtime.md  0006-fusion-engine.md  0007-evaluation.md  0008-roadmap.md  0009-learning-optimizer.md  0010-positioning-pivot.md  0011-constraint-policy-optimizer.md  0012-strategy-library.md  0013-constraint-aware-learning.md  README.md
examples/: basic_demo.py  battle_demo.py  constrained_demo.py  constraint_learning_demo.py  learning_demo.py  learning_replay.py
fek/: __init__.py  kernel.py
fek/classifier/: __init__.py  complexity.py
fek/compiler/: __init__.py  builder.py
fek/constraint/: __init__.py  analyzer.py
fek/core/: __init__.py  graph.py  types.py
fek/cost/: __init__.py  tokenizer.py
fek/evaluation/: __init__.py  scorer.py
fek/fusion/: __init__.py  moa.py
fek/learning/: __init__.py  backtest.py  bandit.py  constraint_learning.py  learner.py  persist.py  reward.py
fek/models/: __init__.py  backend.py  mock.py  openai_backend.py
fek/policy/: __init__.py  engine.py  optimizer.py
fek/profiler/: __init__.py  complexity.py
fek/reflection/: __init__.py  evaluator.py
fek/runtime/: __init__.py  executor.py
fek/strategies/: __init__.py  builtin.py  protocol.py  registry.py
fek/telemetry/: __init__.py  recorder.py
tests/: test_backtest.py  test_classifier.py  test_constraint.py  test_constraint_learning.py  test_graph.py  test_kernel.py  test_learning.py  test_optimizer.py  test_policy.py  test_profiler.py  test_strategies.py
web/: app.py
