[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fek"
version = "0.1.0"
description = "Fusion Execution Kernel —— 自适应多模型执行内核：为每个任务自动选出最优计算图，并持续权衡成本/延迟/质量。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agent", "moa", "execution-kernel", "multi-agent", "fusion", "cost-aware", "hackathon"]
authors = [{ name = "FEK Contributors" }]
maintainers = [{ name = "FEK Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_ORG/fek"
Repository = "https://github.com/YOUR_ORG/fek"
Issues = "https://github.com/YOUR_ORG/fek/issues"
Documentation = "https://github.com/YOUR_ORG/fek#readme"

[project.optional-dependencies]
ui = ["streamlit>=1.30", "graphviz>=0.20"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["fek*"]

[project.scripts]
fek = "examples.basic_demo:main"
