[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fek"
version = "0.1.0"
description = "FEK · Adaptive AI Execution Engine —— 为每个 AI 任务自动选择并运行最优执行策略，并在成本/质量/延迟上持续学习优化。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "ai-execution", "execution-engine", "policy-engine", "multi-agent", "moa", "cost-aware", "adaptive"]
authors = [{ name = "FEK Contributors" }]
maintainers = [{ name = "FEK Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Yum-wu/fek"
Repository = "https://github.com/Yum-wu/fek"
Issues = "https://github.com/Yum-wu/fek/issues"
Documentation = "https://github.com/Yum-wu/fek#readme"

[project.optional-dependencies]
ui = ["streamlit>=1.30", "graphviz>=0.20"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["fek*"]

[project.scripts]
fek = "examples.basic_demo:main"
